force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_DUNS_Number__c</fullName>
    <description>Source table: rod
Source column: rod_cecs_nbr</description>
    <label>Vendor DUNS Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>