force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email_Date__c</fullName>
    <description>Source table: rod
Source column: rod_ven_email_dte</description>
    <label>Vendor Email Date</label>
    <type>Date</type>
</CustomField>