force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Flag__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod
Source column: rod_vnd_flg</description>
    <label>Vendor Flag</label>
    <type>Checkbox</type>
</CustomField>