force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_Number__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: csc_dtl_ven_invoice_nbr</description>
    <label>Vendor Invoice Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>