force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Offset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Offset_Amount__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_vendor_offset_amt / csc_dtl_ven_off_amt</description>
    <label>Vendor Offset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>