force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Offset_Flag__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Offset_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_ven_off / csc_dtl_ven_off_flg</description>
    <label>Vendor Offset Flag</label>
    <type>Checkbox</type>
</CustomField>