force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Offset_Reverse_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Offset_Reverse_Amount__c</fullName>
    <description>Source table: rod
Source column: rod_ven_off_rev_amt</description>
    <label>Vendor Offset Reverse Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>