force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Offset_Reverse_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Offset_Reverse_Date__c</fullName>
    <description>Source table: rod
Source column: rod_ven_off_rev_dte</description>
    <label>Vendor Offset Reverse Date</label>
    <type>Date</type>
</CustomField>