force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Offset_Reverse_Flag__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Offset_Reverse_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod
Source column: rod_ven_off_rev_flg</description>
    <label>Vendor Offset Reverse Flag</label>
    <type>Checkbox</type>
</CustomField>