force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Offset_Reverse_User__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Offset_Reverse_User__c</fullName>
    <description>Source table: rod
Source column: rod_ven_off_rev_usr</description>
    <label>Vendor Offset Reverse User</label>
    <length>2</length>
    <type>Text</type>
</CustomField>