force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Response_Date__c</fullName>
    <description>Source table: rod
Source column: rod_ven_rsp_dte</description>
    <label>Vendor Response Date</label>
    <type>Date</type>
</CustomField>