force-app/main/default/objects/NCSCOrderLineItem__c/fields/Warranty_Flag__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_wrnty_flg / csc_dtl_wrnty_flg</description>
    <label>Warranty Flag</label>
    <type>Checkbox</type>
</CustomField>